# models/order.js
@@ -1,0 +1,28 @@
+import mongoose from "mongoose";
+const { Schema } = mongoose;
+
+const orderSchema = new Schema(
+  {
+    user: { type: Schema.Types.ObjectId, ref: "User", required: true },
+    prescription: {
+      type: Schema.Types.ObjectId,
+      ref: "Prescription",
+      required: true,
+    },
+    product: { type: Schema.Types.ObjectId, ref: "Product", required: true },
+    quantity: { type: Number, required: true, min: 1 },
+    total: { type: Number, required: true, min: 0 },
+    status: {
+      type: String,
+      enum: ["pending", "paid", "shipped", "delivered", "cancelled"],
+      default: "pending",
+    },
+    orderDate: { type: Date, default: Date.now },
+  },
+  {
+    timestamps: true,
+  }
+);
+
+const Order = mongoose.model("Order", orderSchema, "orders");
+export default Order;
